--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Code, etc.
 header-img: img/home-bg.png
 email: micah.shute@gmail.com
 copyright_name: micahshute
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Sharing thoughts, ideas, code
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  micahshute
